# MiniChain_GP

./: .gitignore  README.md  blockchain.py  main.py  pyproject.toml  requirements.txt
src/minichain/: account.py  block.py  blockchain.py  cli.py  merkle_tree.py  miner.py  persistence.py  transaction.py  verifier.py
tests/: test_phase1.py  test_phase2.py  test_pwo.py
