[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "minichain"
version = "0.1.0"
description = "MiniChain — simplified educational blockchain (COMP4137/COMP7200)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
